// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toast > renders with actions correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <div data-slot="actions" class=""><button type="button" data-akar-toast-announce-exclude="" data-akar-toast-announce-alt="Action" data-slot="base" class="">
            <!--v-if--><span data-slot="label" class="">Action</span>
            <!--v-if-->
          </button></div>
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with as correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <section data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </section>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with avatar correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right"><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with class correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="bg-elevated/50" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with close slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->Close slot
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with closeIcon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with color neutral correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with description correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <div data-slot="description" class="">This is a toast</div>
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with description slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <div data-slot="description" class="">Description slot</div>
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with icon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg>
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with leading slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">Leading slot<div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with orientation horizontal correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="horizontal" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg>
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <div data-slot="description" class="">This is a toast</div>
        <!--v-if-->
      </div>
      <div data-slot="actions" class=""><button type="button" data-akar-toast-announce-exclude="" data-akar-toast-announce-alt="Action" data-slot="base" class="">
          <!--v-if--><span data-slot="label" class="">Action</span>
          <!--v-if-->
        </button><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button></div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with orientation vertical correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg>
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <div data-slot="description" class="">This is a toast</div>
        <div data-slot="actions" class=""><button type="button" data-akar-toast-announce-exclude="" data-akar-toast-announce-alt="Action" data-slot="base" class="">
            <!--v-if--><span data-slot="label" class="">Action</span>
            <!--v-if-->
          </button></div>
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with title correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with title slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Title slot</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with type correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders with ui correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="font-bold">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if--><button type="button" data-akar-toast-announce-exclude="" aria-label="Close" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
          <!--v-if-->
          <!--v-if-->
        </button>
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`toast > renders without close correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" data-expanded="true" data-slot="viewport" class="" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-akar-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!--v-if-->
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="" style="transform: translateX(-0%);"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;
